--- a/src/static/sass/_components.scss
+++ b/src/static/sass/_components.scss
@@ -128,6 +128,18 @@
 	&:hover {
 		background-color: #444;
 	}
+}
+
+.btn-danger {
+	background-color: #e60000;
+	color: white;
+	padding: 6px 15px;
+	cursor: pointer;
+
+	&:hover {
+		background-color: red;
+	}
+}
 
 ///////////////////////////////////////////////////////////
 // Info Form
