--- a/src/static/sass/_layout.scss
+++ b/src/static/sass/_layout.scss
@@ -197,3 +197,48 @@
 		margin-bottom: 5px;
 	}
 }
+
+///////////////////////////////////////////////////////////
+// Admin Page
+.reports {
+	border: 1px solid var(--color-border);
+	max-width: 1200px;
+	margin: 20px;
+	align-self: center;
+}
+
+.tr {
+	display: grid;
+	grid-template-columns: .5fr 1fr 3fr 1fr;
+	background-color: var(--color-background);
+
+	&:nth-child(odd) {
+		background-color: var(--color-primary);
+	}
+
+	&:not(:last-child) {
+		border-bottom: 1px solid var(--color-border);
+	}
+
+	&:hover {
+		background-color: var(--color-secondary);
+	}
+}
+
+.td {
+	padding: 12px 5px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+
+	&:not(:last-child) {
+		border-right: 1px solid var(--color-border);
+	}
+}
+
+.th {
+	@extend .td;
+
+	text-align: center;
+	font-weight: 700;
+}
