--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -1,21 +1,31 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-<ul>
-<form action="{{url_for('dismiss_all')}}" method="POST">
-	<input type="submit" name="" value="Dismiss All Reports">
-</form>
+<div class="reports">
+	<div class="tr">
+		<div class="th"></div>
+		<div class="th">Date Reported</div>
+		<div class="th">Reason</div>
+		<div class="th">IP</div>
+	</div>
+
 {% for report in reports %}
-<li class="report">
-	<form action="{{url_for('dismiss', report_id=report.id)}}" method="POST">
-		<input type="submit" name="" value="Dismiss">
-	</form>
-	<span>{{report.date.strftime("%Y-%m-%d %H:%M:%S")}}</span>
-	<span>{{report.reason}}</span>
-	<span>{{report.ip}}</span>
-	<a href="{{url_for('thread', thread_num=report.post.thread.thread_num, _anchor=report.post.post_num)}}">#{{report.post.post_num}}</a>
-</li>	
+	<a href="{{url_for('thread', thread_num=report.post.parent_thread, _anchor=report.post_reported)}}" class="tr">
+
+		<form action="{{url_for('dismiss', report_id=report.id)}}" method="POST" class="td">
+			<input type="submit" name="" value="Dismiss">
+		</form>
+
+		<div class="td">{{report.date.strftime("%Y-%m-%d %H:%M:%S")}}</div>
+		<div class="td" title="{{report.reason}}">{{report.reason}}</div>
+		<div class="td">{{report.ip}}</div>
+	</a>
 {% endfor %}
-</ul>
+
+</div>
+
+<form action="{{url_for('dismiss_all')}}" method="POST" style="align-self: center">
+	<input type="submit" name="" value="Dismiss All Reports" class="btn-danger">
+</form>
 
 {% endblock %}
