--- a/src/templates/_post.html
+++ b/src/templates/_post.html
@@ -50,7 +50,7 @@
 					{% endif %}
 				</div>
 				<a href="{{url_for('get_media', filename=file.filename)}}">
-					<img src="{{url_for('get_media', filename=file.filename)}}">
+					<img src="{{url_for('get_media', filename=file.filename)}}" onerror="this.src='/static/missing.png'">
 				</a>	
 				{% if session.get('admin', None) %}
 				<form action="{{url_for('delete_file', file_id=file.id)}}" method="POST">
