--- a/src/templates/stats.html
+++ b/src/templates/stats.html
@@ -6,7 +6,7 @@
 	{% for flag in flag_list %}
 		<div class="flag-list__item">
 			{% if flag[0] %}
-				<img src="{{url_for('static', filename='flags/' + flag[0])}}" title="{{FLAG_MAP[flag[0]]}}" alt="" onerror="this.src='/static/icons/x.png'"> <span>{{flag[1]}} Posts</span>
+				<img src="{{url_for('static', filename='flags/' + flag[0])}}" title="{{flag[2]}}" alt="" onerror="this.src='/static/icons/x.png'"> <span>{{flag[1]}} Posts</span>
 			{% endif %}
 		</div>
 	{% endfor %}
