Changed some CSS tags to closer match KC tags

--- a/src/static/dark.css
+++ b/src/static/dark.css
@@ -15,10 +15,10 @@ input, select, textarea {
 }
 
 .spoiler:hover {
-	color: lightgrey !important;
+	color: #eee !important;
 }
 
-.greentext {
+.greenText {
 	color: limegreen !important;
 }
 
