--- a/src/static/sass/_typography.scss
+++ b/src/static/sass/_typography.scss
@@ -3,21 +3,21 @@
 	font-weight: 700;
 }
 
-.greentext {
+.greenText {
 	color: #077;
 }
 
-.orangetext {
+.orangeText {
 	color: #e04000;
 }
 
-.redtext {
+.redText {
 	color: #af0a0f;
 	font-weight: 700;
 	font-size: 125%;
 }
 
-.reply-link {
+.quoteLink {
 	color: red !important;
 
 	&:hover {
