Updated change theme button

--- a/src/static/dark.css
+++ b/src/static/dark.css
@@ -10,7 +10,7 @@
 	color: white !important;
 }
 
-input, select, textarea {
+input[type="text"], input[type="checkbox"], input[type="date"], select, textarea {
 	background-color: #eee;
 }
 
