--- a/src/static/style.css
+++ b/src/static/style.css
@@ -95,6 +95,13 @@ a {
     .search-bar input[type="submit"]:hover {
       background-color: grey; }
 
+.banner {
+  text-align: center;
+  padding: 3px;
+  background-color: royalblue;
+  color: white;
+  box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.25); }
+
 @media only screen and (max-width: 1000px) {
   .search-bar {
     display: none; } }
