Minor fixes to templates

--- a/src/templates/_search-form.html
+++ b/src/templates/_search-form.html
@@ -4,19 +4,19 @@
 	{{form.message(placeholder="Message")}}
 	{{form.orig_name(placeholder="Filename")}}
 	{{form.filename(placeholder="File Hash (Sha256)")}}
-	
+
 	<div>
 		{{form.is_op}}
 		<label>Is OP</label>
 		{{form.banned}}
-		<label>Banned</label>		
+		<label>Banned</label>
 	</div>
 	<div>
 		<label>Post Flag: </label>
 		{{form.flag}}
 	</div>
 
-	<div>	
+	<div>
 		<label>Start Date: </label>
 		{{form.start_date}}
 	</div>
@@ -24,6 +24,6 @@
 		<label>End Date: </label>
 		{{form.end_date}}
 	</div>
-	
-	<input type="submit" name="" class="btn-submit">
+
+	<input type="submit" name="" class="btn-submit" value="Submit">
 </form>
