--- a/src/static/sass/_components.scss
+++ b/src/static/sass/_components.scss
@@ -5,7 +5,6 @@
 	border: 1px solid var(--color-border);
 	overflow: hidden;
 	text-align: center;
-	transition: all .2s;
 
 	&:hover {
 		overflow-y: auto;
@@ -121,7 +120,7 @@
 	background-color: #333;
 	color: white;
 	cursor: pointer;
-	transition: all .2s;
+	transition: background-color .2s;
 	grid-column: 1 / 3;
 	justify-self: center;
 
@@ -138,31 +137,6 @@
 
 	&:hover {
 		background-color: red;
-	}
-}
-
-///////////////////////////////////////////////////////////
-// Info Form
-.info-form {
-	display: flex;
-	flex-direction: column;
-	width: 70%;
-	color: black;
-	margin: 2rem;
-	
-
-	& > *:not(:last-child) {
-		margin-bottom: 2rem;
-	}
-
-	& input {
-		height: 2.5rem;
-	}
-
-	& textarea {
-		resize: none;
-		height: 20rem;
-		font-size: 2.5rem;
 	}
 }
 
@@ -231,7 +205,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	
+
 	&__item {
 		background-color: var(--color-primary);
 		border: 1px solid var(--color-border);
