--- a/src/static/style.css
+++ b/src/static/style.css
@@ -65,7 +65,7 @@ a {
     display: flex;
     align-items: center;
     padding: 1.5rem 2.5rem;
-    transition: all .2s; }
+    transition: background-color .2s; }
     .top-nav__item:hover {
       background-color: #444; }
 
@@ -91,7 +91,7 @@ a {
     border: 1px solid grey;
     border-left: none;
     background-color: lightgrey;
-    transition: all .2s; }
+    transition: background-color .2s; }
     .search-bar input[type="submit"]:hover {
       background-color: grey; }
 
@@ -194,7 +194,7 @@ a {
   background-color: var(--color-primary);
   border: 1px solid var(--color-border);
   margin: 20px;
-  max-width: 850px;
+  max-width: 1000px;
   min-height: 200px;
   align-self: center; }
   .site-info a {
@@ -250,8 +250,7 @@ a {
   background-color: var(--color-primary);
   border: 1px solid var(--color-border);
   overflow: hidden;
-  text-align: center;
-  transition: all .2s; }
+  text-align: center; }
   .catalog-thread:hover {
     overflow-y: auto; }
   .catalog-thread__header {
@@ -321,7 +320,7 @@ a {
   background-color: #333;
   color: white;
   cursor: pointer;
-  transition: all .2s;
+  transition: background-color .2s;
   grid-column: 1 / 3;
   justify-self: center; }
   .btn-submit:hover {
@@ -334,21 +333,6 @@ a {
   cursor: pointer; }
   .btn-danger:hover {
     background-color: red; }
-
-.info-form {
-  display: flex;
-  flex-direction: column;
-  width: 70%;
-  color: black;
-  margin: 2rem; }
-  .info-form > *:not(:last-child) {
-    margin-bottom: 2rem; }
-  .info-form input {
-    height: 2.5rem; }
-  .info-form textarea {
-    resize: none;
-    height: 20rem;
-    font-size: 2.5rem; }
 
 .search-form {
   display: grid;
