Added sort order option to search

--- a/src/templates/_search-form.html
+++ b/src/templates/_search-form.html
@@ -25,5 +25,10 @@
 		{{form.end_date}}
 	</div>
 
+	<div>
+		<label>Sort Order: </label>
+		{{form.order}}
+	</div>
+
 	<input type="submit" name="" class="btn-submit" value="Submit">
 </form>
