Added sages to post header

--- a/src/static/sass/_components.scss
+++ b/src/static/sass/_components.scss
@@ -64,8 +64,8 @@
 		line-height: 2rem;
 		flex-wrap: wrap;
 
-		& > *:not(:first-child) {
-			margin-left: .5rem;
+		& > *:not(:last-child) {
+			margin-right: 5px;
 		}
 	}
 
