--- a/src/static/sass/_layout.scss
+++ b/src/static/sass/_layout.scss
@@ -137,17 +137,18 @@
 	flex-direction: column;
 	align-items: flex-start;
 	padding: 1.5rem 1rem;
+}
 
-	&__footer {
-		background-color: var(--color-header);
-		color: #eee;
-		margin-top: auto;
-		display: flex;
-		box-shadow: 0 -.2rem 1rem rgba(0,0,0,.25);
-	}
+.footer {
+	background-color: var(--color-header);
+	color: #eee;
+	margin-top: auto;
+	display: flex;
+	box-shadow: 0 -.2rem 1rem rgba(0,0,0,.25);
+	align-items: center;
 
-	&__footer-link {
-		padding: .2rem .5rem;
+	& > * {
+		padding: 2px 5px;
 
 		&:hover {
 			color: white;
