--- a/src/static/sass/_components.scss
+++ b/src/static/sass/_components.scss
@@ -249,3 +249,28 @@
 	border: 2px dashed black;
 	max-width: 95%;
 }
+
+///////////////////////////////////////////////////////////
+// Sticky Nav
+.stickynav {
+	position: fixed;
+	bottom: 5px;
+	right: 5px;
+	z-index: 1;
+	background-color: var(--color-primary);
+	border: 1px solid var(--color-border);
+	display: flex;
+
+	& > a {
+		padding: 5px;
+
+		&:not(:last-child) {
+			border-right: 1px solid var(--color-border);
+		}
+
+		&:hover {
+			background-color: var(--color-secondary);
+		}
+	}
+}
+
