--- a/src/static/style.css
+++ b/src/static/style.css
@@ -410,6 +410,21 @@ a {
   border: 2px dashed black;
   max-width: 95%; }
 
+.stickynav {
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+  z-index: 1;
+  background-color: var(--color-primary);
+  border: 1px solid var(--color-border);
+  display: flex; }
+  .stickynav > a {
+    padding: 5px; }
+    .stickynav > a:not(:last-child) {
+      border-right: 1px solid var(--color-border); }
+    .stickynav > a:hover {
+      background-color: var(--color-secondary); }
+
 .subject {
   color: #c33;
   font-weight: 700; }
