--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -3,6 +3,15 @@
 {% extends 'layout.html' %}
 {% block content %}
 
+	<div class="stickynav">
+		<a href="#" title="Go to Top">
+			<img src="{{url_for('static', filename='icons/arrow-up.png')}}" alt="">
+		</a>
+		<a href="#footer" title="Go to Bottom">
+			<img src="{{url_for('static', filename='icons/arrow-down.png')}}" alt="">
+		</a>
+	</div>
+
 	<div class="thread">
 		{% for post in posts %}
 
