--- a/src/templates/_catalog-thread.html
+++ b/src/templates/_catalog-thread.html
@@ -1,7 +1,7 @@
 <div class="catalog-thread">
 	<div class="catalog-thread__header">
 		{% if post.flag %}
-			<img class="catalog-thread__header-flag" src="{{url_for('static', filename='flags/' + post.flag)}}" title="{{post.get_flag_name}}" onerror="this.src='/static/icons/x.png'">
+			<img class="catalog-thread__header-flag" src="{{url_for('static', filename='flags/' + post.flag)}}" title="{{post.flag_name}}" onerror="this.src='/static/icons/x.png'">
 		{% endif %}
 		{% if post.subject %}
 			<a class="subject" href="{{url_for('thread', thread_num=post.post_num)}}">{{post.subject|safe}}</a>
