--- a/src/static/sass/_layout.scss
+++ b/src/static/sass/_layout.scss
@@ -146,6 +146,7 @@
 	display: flex;
 	box-shadow: 0 -.2rem 1rem rgba(0,0,0,.25);
 	align-items: center;
+	justify-content: center;
 
 	& > * {
 		padding: 2px 5px;
