--- a/src/static/style.css
+++ b/src/static/style.css
@@ -147,7 +147,8 @@ a {
   margin-top: auto;
   display: flex;
   box-shadow: 0 -0.2rem 1rem rgba(0, 0, 0, 0.25);
-  align-items: center; }
+  align-items: center;
+  justify-content: center; }
   .footer > * {
     padding: 2px 5px; }
     .footer > *:hover {
@@ -283,6 +284,8 @@ a {
     color: blue; }
     .post a:visited {
       color: purple; }
+    .post a:hover {
+      text-decoration: underline; }
   .post__header {
     display: flex;
     align-items: flex-start;
@@ -296,8 +299,6 @@ a {
     padding: .2rem .4rem 0 .4rem; }
   .post__reply {
     margin-left: .2rem; }
-    .post__reply:hover {
-      text-decoration: underline; }
   .post__content {
     display: flex;
     flex-wrap: wrap; }
@@ -459,8 +460,6 @@ a {
 
 .quoteLink {
   color: red !important; }
-  .quoteLink:hover {
-    text-decoration: underline; }
 
 .mod-label {
   color: red;
